--- a/mewApp/package.json
+++ b/mewApp/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.15.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^4.0.0",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
