--- a/mewApp/package.json
+++ b/mewApp/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@mui/material": "^5.15.9",
+    "@tanstack/react-query": "^4.36.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^4.0.0",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@types/react-query": "^1.2.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
