--- a/mewApp/package.json
+++ b/mewApp/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
     "@mui/material": "^5.15.9",
     "@tanstack/react-query": "^4.36.1",
     "react": "^18.2.0",
