--- a/mewApp/package.json
+++ b/mewApp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
+    "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.9",
     "@tanstack/react-query": "^4.36.1",
     "react": "^18.2.0",
